[gd_scene load_steps=16 format=2]

[ext_resource path="res://LadyInteract.gd" type="Script" id=1]
[ext_resource path="res://Assets/Npc asset/lady.png" type="Texture" id=2]
[ext_resource path="res://Assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" type="Script" id=4]
[ext_resource path="res://addons/dialogue_nodes/objects/dialogueBox.gd" type="Script" id=5]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 61.5, 52.5 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="RichTextEffect" id=8]
script = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 38.5, 44 )

[node name="Lady" type="Area2D"]
collision_layer = 65
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 6 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = -49.0
margin_top = -62.0
margin_right = 59.0
margin_bottom = -47.0
custom_fonts/font = SubResource( 1 )
text = "interact (e)"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="PopupDialog" parent="CanvasLayer"]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.5
margin_top = -143.0
margin_right = 215.5
rect_min_size = Vector2( 300, 72 )
popup_exclusive = true
script = ExtResource( 5 )
custom_effects = [ SubResource( 8 ) ]

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
collision_layer = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.5, 0 )
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Lady_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lady_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
